<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

  <TextView
      android:id="@+id/textView4"
      android:layout_width="189dp"
      android:layout_height="167dp"
      android:fontFamily="@font/adamina"
      android:text="@string/titulo"
      android:textColor="@color/blue"
      android:textSize="48sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.972"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.04"
      tools:ignore="TextSizeCheck" />

  <EditText
      android:id="@+id/txtUser1"
      android:layout_width="318dp"
      android:layout_height="63dp"
      android:autofillHints=""
      android:drawableEnd="@drawable/gmail"
      android:ems="10"
      android:hint="@string/usu"
      android:inputType="text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.419"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.345" />

  <EditText
      android:id="@+id/txtPass1"
      android:layout_width="318dp"
      android:layout_height="63dp"
      android:autofillHints=""
      android:drawableEnd="@drawable/pass"
      android:ems="10"
      android:hint="@string/co"
      android:inputType="textPassword"
      android:textColorHint="#546E7A"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.419"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.468" />

  <Button

      android:id="@+id/btnIngresar2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/blue"
      android:text="@string/buton"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.427"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.602"
      tools:ignore="DuplicateSpeakableTextCheck" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="180dp"
      android:layout_height="174dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.012"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.028"
      app:srcCompat="@drawable/imagen"
      android:contentDescription="TODO" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="256dp"
      android:layout_height="177dp"
      android:layout_marginTop="600dp"
      android:layout_marginEnd="228dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ellipse_54"/>

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="224dp"
      android:layout_height="349dp"
      android:layout_marginStart="248dp"
      android:layout_marginTop="504dp"
      android:contentDescription="TODO"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ellipse_54" />

  <Button
      android:id="@+id/btnIngresar3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/blue"
      android:fontFamily="@font/adamina"
      android:text="@string/btnCuenta"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.442"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.697" />
</androidx.constraintlayout.widget.ConstraintLayout>